--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,22 +3,24 @@
      [center]="[0, 50]" [nbParticles]="15" 
      [size]="[0,800]"
      ></div>
-<h1>The Social Learning Environment<span class="blue"><b>*</b></span> for B-Schools.</h1>
+<h1>The Social Learning Environment<span class="blue"><b>*</b></span> for <span class="no-break">B-Schools.</span></h1>
 <div class="block">
     <p>
-        <span class="blue"><b>*</b></span><b>Engagement</b> online is at <u>the heart of our product design</u>.<br/> 
-        This is why we have developped a technology combining a state-of-the-art <br/>
+        <span class="blue"><b>*</b></span><b>Engagement</b> online is at <u>the heart of our product design</u>.<br class='desktop'/> 
+        This is why we have developped a technology combining a state-of-the-art <br class='desktop'/>
         Learning Management System with 21st-Century social networking tools.
     </p>
     <button class="button">See Our Product<span class="arrow">></span></button>
 </div>
-<div class="block flex marged">
+<div class="block citation-block">
     <div class="quote">“</div>
     <div class="portrait"></div>
-    <div class="citation-block">
-        <div class="citation">THE POWER OF NETWORKED EDUCATION</div>
+    <div class="citation">
+        <div class="citation-content">THE POWER OF NETWORKED EDUCATION</div>
         <p>
-            <b>Edward Snyder</b>, Dean of Yale School of Management<br/>
+            <b>Edward Snyder</b>, Dean of Yale School of Management
+        </p>
+        <p>
             ‘Dean of the year 2015’ by <img class="poets" src="assets/images/Poets-Quants-logo.jpg" />
         </p>
 
