--- a/src/styles.less
+++ b/src/styles.less
@@ -31,7 +31,9 @@ body{
     overflow-x: hidden;
 }
 
-
+.no-break{
+    white-space: nowrap;
+}
 
 .content {
     display : flex;
@@ -42,13 +44,16 @@ body{
     @media(max-width : 1100px){
         padding : 0 1rem;
     }
-     p{
+    p{
         text-align: center;
         display : block;
         width : 100%;
         max-width : 80rem;
         margin-bottom: 5rem;
         color: @clr-text;
+        @media(max-width : 1023px){
+            margin-top : 0rem;
+        }
     }
 }
 
@@ -70,20 +75,23 @@ body{
 
 
 h1{
-    font-size: 4rem;
+    font-size: 3.8rem;
     font-weight: bold;
     text-align: center;
-    line-height: 6.2rem;
+    line-height: 5.2rem;
     color: @clr-text;
     width : 100%;
     margin-top : 8rem;
+    @media(max-width : 1023px){
+        margin-bottom: 1rem;
+    }
 }
 
 
 button{    
     background-color: @clr-blue;
     border-radius: 2px;
-    height: 5rem;
+    height: 5.2rem;
     line-height: 5rem;
     padding:0 2rem;
     border:0;
@@ -109,6 +117,9 @@ button{
         }
         
     }
+    @media(max-width : 1023px){
+        width : 100%;
+    }
 }
 
 .block{
@@ -120,11 +131,12 @@ button{
         margin-left : auto;
         margin-right : auto;
     }
-    &.flex{
-        display : flex;
-    }
-    &.marged{
-        margin-top: 15rem;
-        margin-bottom: 15rem;
+  
+}
+
+
+@media(max-width : 1023px){
+    .desktop{
+        display : none;
     }
 }
