--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -40,15 +40,16 @@
     
     .citation{
         margin-top : 6rem;
+        position : relative;
         background: linear-gradient(203.37deg, #EEEEEE 0%, #FFFFFF 60%);
+        padding : 8rem 2rem 2rem 6rem;
         @media(max-width : 1023px){
             margin-top : -22rem;
-            padding-top : 24rem;
+            padding : 24rem 2rem 2rem 2rem;
             margin-bottom : 16rem;
         }
         border-radius: 4px;
         flex : 1;
-        padding : 8rem 2rem 2rem 6rem;
         color: @clr-text;
         p {
             font-size: 1.8rem;
@@ -96,11 +97,10 @@
     line-height: 101px;
     opacity : 0.5;
     position : absolute;
-    left : 58rem;
-    top : 4rem;
+    left : 3rem;
+    top : -3rem;
      @media(max-width : 1023px){
         left : calc(~"70% + 4rem");
-        top : 0rem;
     }
 }
 
