Fix block position

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
         <p>
             <b>Edward Snyder</b>, Dean of Yale School of Management
         </p>
-        <p>
+        <p class="poets-paragraph">
             ‘Dean of the year 2015’ by <img class="poets" src="assets/images/Poets-Quants-logo.jpg" />
         </p>
 
