--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -63,6 +63,9 @@
                     text-align : center;
                 }
             }
+            &.poets-paragraph{
+                padding-left: 4rem;
+            }
            
 
         }
