--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -121,6 +121,7 @@
         img{
             height : 6rem;
             margin : 0 auto;
+            max-width : 100%;
             -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
             filter: grayscale(100%);
             opacity: 0.55;
