--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,8 +2,7 @@
     <div class="footer-column">
         <img class="footer-logo" src="assets/images/Logo.svg"/>
         <p>
-            Marketers/advertisers usually focus their efforts on the people responsible for making the purchase. <br/>
-            Copyright © 2017, Shipped from Monaco, FRA.
+            Copyright © 2017, Twic by THE STUDNET.
         </p>
     </div>
     <div class="footer-column">
@@ -12,33 +11,18 @@
             <li>Product</li>
             <li>Pricing</li>
             <li>Support</li>
-            <li>Guides</li>
         </ul>
     </div>
     <div class="footer-column">
         <div class="footer-title">Twic</div> 
         <ul>
             <li>About</li>
-            <li>Partners</li>
-            <li>Blog</li>
-        </ul>
-    </div>
-    <div class="footer-column">
-        <div class="footer-title">Legal</div>
-        <ul>
-            <li>Privacy</li>
-            <li>Security</li>
-            <li>Terms of service</li>
-        </ul>
-    </div>
-    <div class="footer-column">
-        <div class="footer-title">Handy links</div>
-        <ul>
-            <li>Download App</li>
+            <li>Download App IOS</li>
+            <li>Download App Android</li>
             <li>Status</li>
-            <li>FERPA and WCAG</li>
         </ul>
     </div>
+   
     <div class="footer-column">
         <div class="footer-title">Contact us</div>
         <span class="icon icon-facebook social-media"></span>
