--- a/src/app/shared/carousel/carousel.component.html
+++ b/src/app/shared/carousel/carousel.component.html
@@ -1,6 +1,5 @@
 <div class="carousel">
-    <div  class="carousel-content" 
-        [ngStyle]="{ 'margin-left' : (-currentPage * 100) + '%' }">
+    <div  class="carousel-content" >
         <ng-content></ng-content>
         
     </div> 
