--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -5,7 +5,7 @@
             Copyright © 2017, Twic by THE STUDNET.
         </p>
     </div>
-    <div class="footer-column">
+    <div class="footer-column desktop">
         <div class="footer-title">Using Twic</div>
         <ul>
             <li>Product</li>
@@ -13,7 +13,7 @@
             <li>Support</li>
         </ul>
     </div>
-    <div class="footer-column">
+    <div class="footer-column desktop">
         <div class="footer-title">Twic</div> 
         <ul>
             <li>About</li>
@@ -23,7 +23,7 @@
         </ul>
     </div>
    
-    <div class="footer-column">
+    <div class="footer-column desktop">
         <div class="footer-title">Contact us</div>
         <span class="icon icon-facebook social-media"></span>
         <span class="icon icon-twitter social-media"></span>
