--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -5,6 +5,22 @@
             Copyright © 2017, Twic by THE STUDNET.
         </p>
     </div>
+    <div class="footer-menu mobile dropdown" app-dropdown>
+        <div class="dropdown-content">
+            <div>See our Product</div>
+            <div>Pricing</div>
+            <div>Support</div>
+            <div>About</div>
+            <div>About</div>
+            <div>Download App IOS</div>
+            <div>Download App Android</div>
+            <div>Status</div>
+        </div>
+        <div class="dropdown-toggle">
+            <div class="text">See our Product</div> <div class="arrow">></div>
+        </div>
+        
+    </div>
     <div class="footer-column desktop">
         <div class="footer-title">Using Twic</div>
         <ul>
