--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -58,8 +58,6 @@
             @media(max-width : 1023px){
                 text-align : center;
             }
-           
-
         }
     }
     
@@ -73,11 +71,7 @@
             text-align : center;
         }
     }
-
 }
-
-
-
 
 .poets{
     display : inline-block;
@@ -119,8 +113,9 @@
             height : 6rem;
             margin : 0 auto;
             max-width : 100%;
-            -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-            filter: grayscale(100%);
+            -webkit-filter: grayscale(1); 
+            filter: gray; 
+            filter: grayscale(1);
             opacity: 0.55;
         }
     }
