--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -123,7 +123,7 @@
 }
 
 :host /deep/ .carousel-pagination{
-    margin : 7.5rem auto 13rem !important;
+    margin : 7.5rem auto 13rem auto !important;
     @media(max-width: 1023px){
         margin : 7.5rem auto !important;
     }
