--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -114,8 +114,8 @@
             margin : 0 auto;
             max-width : 100%;
             -webkit-filter: grayscale(1); 
-            filter: gray; 
             filter: grayscale(1);
+            filter: url('../../assets/images/gray.svg#grayscale');
             opacity: 0.55;
         }
     }
