--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -112,10 +112,11 @@
         img{
             height : 6rem;
             margin : 0 auto;
-            max-width : 100%;
-            -webkit-filter: grayscale(1); 
-            filter: grayscale(1);
-            filter: url('../../assets/images/gray.svg#grayscale');
+            max-width : 100%; 
+            -webkit-filter: grayscale(100%);
+            -moz-filter: grayscale(100%);
+            -ms-filter: grayscale(100%);
+            -o-filter: grayscale(100%);
             opacity: 0.55;
         }
     }
