--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer-content">
     <div class="footer-column">
-        <img class="footer-logo" src="assets/images/Logo.svg"/>
+        <img class="footer-logo" src="assets/images/Logo-white.png"/>
         <p>
             Copyright © 2017, Twic by THE STUDNET.
         </p>
