--- a/src/app/shared/carousel/carousel.component.less
+++ b/src/app/shared/carousel/carousel.component.less
@@ -48,6 +48,7 @@
 .carousel-pagination{
     margin : 4rem auto;
     display : flex;
+    justify-content : center;
     .pagination-point{
         width : 0.9rem;
         height : 0.9rem;
