--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,7 +12,7 @@
                 <div class="bar"></div>
                 <div class="bar"></div>
             </div>
-            <img class="menu-logo" src="assets/images/Logo.svg"/>
+            <img class="menu-logo" src="assets/images/Logo-white.png"/>
         </div>
         <div>Product</div>
         <div>Pricing</div>
