--- a/src/app/shared/header/header.component.less
+++ b/src/app/shared/header/header.component.less
@@ -30,8 +30,8 @@
                 height : 8.5rem;
             }
             .menu-logo{
-                filter: contrast(0) brightness(100);
-                -webkit-filter: contrast(0) brightness(100);
+                height : 3rem;
+                margin-top: 2rem;
             }
             .bar{
                 background : #FFF;
