--- a/src/app/shared/wave/wave.component.html
+++ b/src/app/shared/wave/wave.component.html
@@ -1,7 +1,15 @@
 <div class="waves">
-    <div id="white-block"></div>
-    <div id="wave-1"></div>
-    <div id="wave-2"></div>
-    <div id="wave-3"></div>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="white-block">
+        <polygon  points="0,0 100,100 0,100"/>
+    </svg>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-1">
+        <polygon points="0,0 100,100, 90,100 50,80 0,100"/>
+    </svg>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-2">
+        <polygon points="0,0 100,100 90,100 50,80 0,60"/>
+    </svg>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-3">
+        <polygon points="0,0 50,50 0,25"/>
+    </svg>
 </div>
     
