--- a/src/app/shared/wave/wave.component.less
+++ b/src/app/shared/wave/wave.component.less
@@ -15,40 +15,21 @@
     height : 100%;
     width : 100%;
 }
-#white-block{
-    background : #FFF;
+svg{
     height : 12rem;
     bottom : 0;
-    left : 0;
-    right : 0;
-    position : absolute;
-    clip-path: polygon(0 0, 100% 100%, 0 100%);
-    
+    width : 100%;
+    position : absolute; 
+}
+#white-block{
+    fill : #FFF;
 }
 #wave-1{
-    height : 12rem;
-    background : @clr-lightblue2;
-    position : absolute;
-    bottom : 0;
-    left : 0;
-    right : 0;
-    clip-path: polygon(0 0, 100% 100%, 90% 100%, 50% 80%,  0 100%);
+    fill : @clr-lightblue2;
 }
 #wave-2{
-    height : 12rem;
-    background : @clr-lightblue3;
-    position : absolute;
-    bottom : 0;
-    left : 0;
-    right : 0;
-    clip-path: polygon(0 0, 100% 100%, 90% 100%, 50% 80%, 0 60%);
+    fill : @clr-lightblue3;
 }
 #wave-3{
-    height : 12rem;
-    background : @clr-lightblue4;
-    position : absolute;
-    bottom : 0;
-    left : 0;
-    right : 0;
-    clip-path: polygon(0 0, 50% 50%,  0 25%);
+    fill : @clr-lightblue4;
 }
