--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -1,6 +1,6 @@
 <div app-wave></div>
 <h1>Transparent pricing.</h1>
-<div class="block">
+<div class="block" id="first-block">
     <p>
         Whatever the plan, <b>Twic</b> is a no-brainer.<br/>
         An all inclusive transparent flat-fee.
@@ -8,3 +8,93 @@
     
 </div>
 <div app-h2 id="choose-you-plan">Choose your plan</div>
+<div class="block table-block">
+    <div class="table">
+        <div class="white column">
+            <div class="title">Course</div>
+            <div class="price">
+                <div class="euro">&euro;</div>
+                <div class="number">5</div>
+                <div class="k">K</div>
+            </div>
+            <div class="lines">
+                <div class="line">
+                    <b>1</b> course
+                </div>
+                <div class="line">
+                    <b>All</b> students enrolled
+                </div>
+                <div class="line">
+                    <b>Full</b> course duration
+                </div>
+            </div>
+        </div>
+        <div class="white column">
+            <div class="title">Program</div>
+            <div class="price">
+                <div class="euro">&euro;</div>
+                <div class="number">50</div>
+                <div class="k">K</div>
+            </div>
+            <div class="lines">
+                <div class="line">
+                    <b>Unlimited</b> courses
+                </div>
+                <div class="line">
+                    <b>All</b> students enrolled
+                </div>
+                <div class="line">
+                    <b>Full</b> program duration
+                </div>
+            </div>
+                
+        </div>
+        <div class="gray column">
+            <div class="title">Institution</div>
+            <div class="price">
+                <div class="title">Contact us</div>
+            </div>
+            <div class="lines">
+                <div class="line">
+                    <b>Unlimited</b> courses and programs
+                </div>
+                <div class="line">
+                    <b>Total</b> enrollment
+                </div>
+                <div class="line">
+                    <b>3</b> years
+                </div>
+            </div>
+                
+        </div>
+    </div>
+</div>
+<div class="block" id="our-pricing">
+    <p>
+        Any question about <b>our pricing</b>? Feel free to <b><u>contact us</u></b>, we're more than happy to help.
+    </p>
+</div>
+
+<div class='block' id='try-our-product'>
+    <p>
+        <b>You can try our product.</b><br/>
+        Start your 30-day free trial for one course today!
+    </p>
+    <button class='button'>
+        Start 30-day free trial
+    </button>
+</div>
+
+<div class='block' id='features'>
+    <div app-h2>
+        All features
+    </div>
+    <li>
+        <ul><span class="icon icon-checkbox-checked"></span>State-of-the-art Learning Management system</ul>
+        <ul><span class="icon icon-checkbox-checked"></span>Collaborative learning and social networking tools</ul>
+        <ul><span class="icon icon-checkbox-checked"></span>Videoconferencing system</ul>
+        <ul><span class="icon icon-checkbox-checked"></span>Data collection and graphic analytics</ul>
+        <ul><span class="icon icon-checkbox-checked"></span>24/7 support (chat and hot line)</ul>
+        <ul><span class="icon icon-checkbox-checked"></span>Custom integration and branding</ul>
+    </li>
+</div>
