--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -1,3 +1,167 @@
+@import "../../assets/less/rules.less";
+
+@keyframes title-in {
+    0% {  opacity : 0; top : -4rem;   }
+    100% {  opacity : 1; top : 0; }
+}
+
+#first-block{
+    animation:  title-in 2s;
+    animation-delay: 2000ms;
+    animation-fill-mode: forwards;
+    opacity : 0;
+    position : relative;
+    top : -4rem;
+}
+
 #choose-you-plan{
-    margin-top : 18rem;
+    padding-top : 18rem;
+}
+
+h1{
+    animation: title-in 2s;
+    animation-delay: 2000ms;
+    animation-fill-mode: forwards;
+    opacity : 0;
+    position : relative;
+    top : -4rem;
+}
+
+.table-block{
+    display : flex;
+}
+.table{
+    display : flex;
+    margin : 4rem auto 1rem;
+    .column{
+        width : 30rem;
+        height : 34rem;
+        display: flex;
+        flex-direction: column;
+        border-radius: 2px;
+        box-shadow: 0 1px 12px 0 rgba(222,222,222,0.5);
+        color : @clr-text;
+        .title{
+            font-size: 1.8rem;
+            line-height: 2.6rem;
+            margin : 3rem 0;
+            font-weight: bold;
+        }
+        &.white{
+            border: 1px solid #DEDEDE;
+            &:first-of-type{
+                border-right : none;
+            }
+        }
+        &.gray{
+            margin-top : 1.5rem;
+            height : 32.5rem;
+            background : @clr-darkgray;
+            color : #FFF;
+            .title{
+                margin : 1.5rem 0 3rem;
+            }
+            .price{                
+                background : @clr-darkgray2;
+            }
+        }
+        
+        .price{
+            height : 10rem;
+            width : 100%;
+            display : flex;
+            flex-align : center;
+            justify-content : center;
+            background-color: @clr-gray;
+            .euro{
+                width: 1.5rem;
+                height: 2.6rem;
+                font-size: 2.6rem;
+                font-weight: bold;
+                line-height: 2.6rem;
+                margin-top : 3rem;
+            }
+            .number{
+                font-size: 5rem;
+                min-width : 4rem;
+                font-weight: bold;
+                line-height: 10rem;
+            }
+            .k{
+                width: 1.5rem;
+                height: 2.6rem;
+                font-size: 2.6rem;
+                line-height: 2.6rem;
+                margin-top : 4.4rem;
+                font-weight: 300;
+            }
+            .title{
+                margin : auto 0;
+            }
+        }
+        .lines{
+            margin : auto 0;
+            .line{
+                font-size: 1.6rem;
+                font-weight: 300;
+                text-align: center;
+                line-height: 4rem;
+            }
+        }
+       
+        
+    }
+}
+
+#our-pricing{
+    margin-bottom: 6rem;
+}
+
+#try-our-product{
+    height : 13rem;
+    background: linear-gradient(180deg, #3C3F48 0%, rgba(60,63,72,0.84) 100%);
+    border-radius: 4px;
+    color : #FFF;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 2.4rem;
+    text-align: left;
+    display : flex;
+    padding : 0 4rem;
+    p{
+        flex : 1;
+        margin : auto 0;
+    }
+    button{
+        margin : auto 0;
+        font-size: 1.4rem;
+        padding : 0 5rem;
+    }
+    
+}
+
+#features{
+    /deep/ h2{
+        margin : 0 !important;
+    }
+    li{
+        display : flex;
+        flex-wrap: wrap;
+        list-style: none;
+        padding : 0 2.6rem;
+        ul{
+            width: calc(~"33% - 4rem");
+            margin : 0 2rem;
+            padding : 0;
+            text-align: left;
+            font-size: 1.6rem;
+            font-weight: bold;
+            line-height: 2.4rem;
+            margin-bottom: 4rem;
+        }
+        .icon{
+            margin-right: 1rem;
+        }
+    }
+    margin-bottom : 6rem;
 }
