--- a/src/app/shared/wave/wave.component.html
+++ b/src/app/shared/wave/wave.component.html
@@ -1,14 +1,20 @@
 <div class="waves">
-    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="white-block">
+    <div id="background-1" class="background">
+    </div>
+    <div id="background-2" class="background">
+    </div>
+    <div id="background-3" class="background">
+    </div>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="white-block" class="wave">
         <polygon  points="0,0 100,100 0,100"/>
     </svg>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-1">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-1" class="wave">
         <polygon points="0,0 100,100, 90,100 50,80 0,100"/>
     </svg>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-2">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-2" class="wave">
         <polygon points="0,0 100,100 90,100 50,80 0,60"/>
     </svg>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-3">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-3" class="wave">
         <polygon points="0,0 50,50 0,25"/>
     </svg>
 </div>
