--- a/src/app/shared/wave/wave.component.less
+++ b/src/app/shared/wave/wave.component.less
@@ -1,5 +1,15 @@
 @import "../../../assets/less/rules.less";
 
+@keyframes wave-in {
+    0% { height : 0rem; opacity : 1;  }
+    100% { height : 12rem; opacity : 1; }
+}
+
+@keyframes wave-out {
+    0% { height : 0rem; opacity : 1;  }
+    75% { height : 100%; opacity : 1; }
+    100% { height : 100%; opacity : 0; }
+}
 
 :host{
     background : @clr-lightblue;
@@ -15,21 +25,58 @@
     height : 100%;
     width : 100%;
 }
-svg{
-    height : 12rem;
+.wave{
     bottom : 0;
     width : 100%;
     position : absolute; 
+    opacity : 0;
 }
+.background{
+    bottom : 0;
+    width : 100%;
+    position : absolute; 
+    opacity : 0;
+}
+
 #white-block{
     fill : #FFF;
+    animation : wave-in 500ms;
+    animation-delay: 1000ms;
+    opacity : 0;
+    animation-fill-mode: forwards;
 }
+
 #wave-1{
     fill : @clr-lightblue2;
+    animation : wave-in 125ms ease-in;
+    animation-delay: 1250ms;
+    animation-fill-mode: forwards;
 }
 #wave-2{
     fill : @clr-lightblue3;
+    animation : wave-in 125ms ease-in;
+    animation-delay: 1500ms;
+    animation-fill-mode: forwards;
 }
 #wave-3{
     fill : @clr-lightblue4;
+    animation : wave-in 125ms ease-in;
+    animation-delay: 1750ms;
+    animation-fill-mode: forwards;
+}
+
+#background-1{
+    background : @clr-lightblue2;
+    animation : wave-out 500ms ease-in;
+    animation-delay: 1000ms;
+}
+#background-2{
+    background : @clr-lightblue3;
+    animation : wave-out 500ms ease-in;
+    animation-delay: 1250ms;
+}
+#background-3{
+    background : @clr-lightblue4;
+    animation : wave-out 500ms ease-in;
+    animation-delay: 1500ms;
 }
