--- a/src/styles.less
+++ b/src/styles.less
@@ -127,6 +127,7 @@ button{
 
 .block{
     text-align: center;
+    max-width: 110rem;
     margin-left : auto;
     margin-right : auto;
     & > *{
