IE COMME D\'HAB QUOI\!\!

--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -137,7 +137,7 @@
     line-height: 2.4rem;
     text-align: left;
     display : flex;
-    padding : 0 4rem;
+    padding : 4rem;
     margin-bottom : 8rem;
     @media(max-width: 1023px){
         flex-direction : column;
