--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -129,7 +129,6 @@
 
 #try-our-product{
     height : 13rem;
-    background: linear-gradient(180deg, #3C3F48 0%, rgba(60,63,72,0.84) 100%);
     border-radius: 4px;
     color : #FFF;
     font-size: 1.8rem;
@@ -139,6 +138,7 @@
     display : flex;
     padding : 4rem;
     margin-bottom : 8rem;
+    background-image: url("assets/images/try-our-product.png");
     @media(max-width: 1023px){
         flex-direction : column;
         text-align : center;
