--- a/src/app/shared/wave/wave.component.html
+++ b/src/app/shared/wave/wave.component.html
@@ -1,9 +1,5 @@
+
 <div class="waves">
-    <div id="background-3" class="background">
-    </div>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="white-block" class="wave">
-        <polygon  points="0,0 100,100 0,100"/>
-    </svg>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-1" class="wave">
         <polygon points="0,0 100,100, 90,100 50,80 0,100"/>
     </svg>
@@ -12,6 +8,9 @@
     </svg>
     <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-3" class="wave">
         <polygon points="0,0 50,50 0,25"/>
+    </svg>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="background">
+        <polygon  points="0,0 100,0 100,100 0,76"/>
     </svg>
 </div>
     
