--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -6,8 +6,8 @@
 }
 
 #first-block{
-    animation:  title-in 2s linear;
-    animation-delay: 2000ms;
+    animation:  title-in 250ms linear;
+    animation-delay: 1500ms;
     animation-fill-mode: forwards;
     opacity : 0;
     position : relative;
