--- a/src/app/shared/wave/wave.component.less
+++ b/src/app/shared/wave/wave.component.less
@@ -1,72 +1,63 @@
 @import "../../../assets/less/rules.less";
 
 @keyframes wave-in {
-    0% { height : 0rem; opacity : 1;  }
-    100% { height : 12rem; opacity : 1; }
+    0% { top : 0; opacity : 0; }
+    100% { top : 38rem; opacity : 1; }
 }
 
-@keyframes wave-out {
-    0% { height : 0rem; opacity : 1;  }
-    75% { height : 100%; opacity : 1; }
-    100% { height : 100%; opacity : 0; }
+@keyframes background-in {
+    0% { height : 30rem; opacity : 0; }
+    100% { height : 50rem; opacity : 1; }
 }
+
 
 :host{
-    background : @clr-lightblue;
-    height : 50rem;
+  
     z-index: -3;
     top : -8rem;
     right : 0;
     left : 0;
     position : absolute;
+    height : 50rem;
 }
 .waves{
     position: relative;
     height : 100%;
-    width : 100%;
+    width : 100%;  
 }
 .wave{
-    bottom : 0;
+    top : 0;
+    opacity : 0;
     width : 100%;
     position : absolute; 
-    opacity : 0;
+    height : 12rem;
 }
-.background{
-    bottom : 0;
-    width : 100%;
+#background{
+    height : 30rem;
+    width : 100%;  
     position : absolute; 
+    fill : @clr-lightblue;
     opacity : 0;
+    animation : background-in 1000ms 500ms forwards;
 }
 
 #white-block{
     fill : #FFF;
-    animation : wave-in 500ms;
-    animation-delay: 1000ms;
-    opacity : 0;
-    animation-fill-mode: forwards;
 }
 
 #wave-1{
     fill : @clr-lightblue2;
-    animation : wave-in 125ms ease-in;
-    animation-delay: 1250ms;
-    animation-fill-mode: forwards;
+    animation : wave-in 1250ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
 }
 #wave-2{
     fill : @clr-lightblue3;
-    animation : wave-in 125ms ease-in;
-    animation-delay: 1300ms;
-    animation-fill-mode: forwards;
+    animation : wave-in 1150ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
 }
 #wave-3{
     fill : @clr-lightblue4;
-    animation : wave-in 125ms ease-in;
-    animation-delay: 1350ms;
-    animation-fill-mode: forwards;
+    animation : wave-in 1050ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
 }
 
 #background-3{
     background : @clr-lightblue4;
-    animation : wave-out 600ms ease-in;
-    animation-delay: 1100ms;
 }
