--- a/src/app/shared/wave/wave.component.html
+++ b/src/app/shared/wave/wave.component.html
@@ -1,16 +1,29 @@
 
 <div class="waves">
-    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-1" class="wave">
-        <polygon points="0,0 100,100, 90,100 50,80 0,100"/>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="wave-1 wave desktop" >
+        <polygon points="0,0 100,100 90,100 50,80 0,100"/>
     </svg>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-2" class="wave">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="wave-2 wave desktop" >
         <polygon points="0,0 100,100 90,100 50,80 0,60"/>
     </svg>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="wave-3" class="wave">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="wave-3 wave desktop" >
         <polygon points="0,0 50,50 0,25"/>
     </svg>
-    <svg viewBox="0 0 100 100" preserveAspectRatio="none" id="background">
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="background desktop">
         <polygon  points="0,0 100,0 100,100 0,76"/>
+    </svg>
+    
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="wave-1-mobile wave mobile" >
+        <polygon points="0,0 90,72 0,95"/>
+    </svg>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="wave-2-mobile wave mobile" >
+        <polygon points="0,0 100,0 100,80 0,65"/>
+    </svg>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="wave-3-mobile wave mobile" >
+        <polygon points="0,0 90,34 0,18"/>
+    </svg>
+    <svg viewBox="0 0 100 100" preserveAspectRatio="none" class="background mobile">
+        <polygon  points="0,0 100,0 100,85 90,84 0,76"/>
     </svg>
 </div>
     
