--- a/src/app/shared/wave/wave.component.less
+++ b/src/app/shared/wave/wave.component.less
@@ -5,6 +5,11 @@
     100% { top : 38rem; opacity : 1; }
 }
 
+@keyframes wave-in-mobile {
+    0% { top : 0; opacity : 0; }
+    100% { top : 38rem; opacity : 1; }
+}
+
 @keyframes background-in {
     0% { height : 30rem; opacity : 0; }
     100% { height : 50rem; opacity : 1; }
@@ -32,7 +37,8 @@
     position : absolute; 
     height : 12rem;
 }
-#background{
+
+.background{
     height : 30rem;
     width : 100%;  
     position : absolute; 
@@ -41,23 +47,28 @@
     animation : background-in 1000ms 500ms forwards;
 }
 
-#white-block{
-    fill : #FFF;
-}
-
-#wave-1{
+.wave-1{
     fill : @clr-lightblue2;
     animation : wave-in 1250ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
 }
-#wave-2{
+.wave-2{
     fill : @clr-lightblue3;
     animation : wave-in 1150ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
 }
-#wave-3{
+.wave-3{
     fill : @clr-lightblue4;
     animation : wave-in 1050ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
 }
 
-#background-3{
-    background : @clr-lightblue4;
+.wave-1-mobile{
+    fill : @clr-lightblue2;
+    animation : wave-in-mobile 1250ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
+}
+.wave-2-mobile{
+    fill : @clr-lightblue3;
+    animation : wave-in-mobile 1150ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
+}
+.wave-3-mobile{
+    fill : @clr-lightblue4;
+    animation : wave-in-mobile 1050ms 600ms cubic-bezier(0.6, 0.4, 0.6, 1.05) forwards;
 }
