--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -8,6 +8,19 @@
     height : 85rem;
 }
 
+ p{
+    text-align: center;
+    display : block;
+    width : 100%;
+    max-width : 80rem;
+    margin-bottom: 5rem;
+    color: @clr-text;
+    @media(max-width : 1023px){
+        margin-top : 0rem;
+        margin-bottom: 3.3rem;
+    }
+}
+
 .citation-block{
     margin-top: 15rem;
     margin-bottom: 15rem;
