--- a/src/app/pricing/pricing.component.less
+++ b/src/app/pricing/pricing.component.less
@@ -23,9 +23,6 @@
     display : flex;
     flex-wrap: wrap;
     margin : 1rem auto;
-    @media(max-width: 1023px){
-        padding : 0 1rem;
-    }
     .column{
         width : 30rem;
         height : 34rem;
@@ -127,7 +124,6 @@
 #try-our-product{
     height : 13rem;
     border-radius: 4px;
-    color : #FFF;
     font-size: 1.8rem;
     font-weight: 300;
     line-height: 2.4rem;
@@ -135,6 +131,7 @@
     display : flex;
     padding : 4rem;
     margin-bottom : 8rem;
+    width : 100%;
     background-image: url("assets/images/try-our-product.png");
     @media(max-width: 1023px){
         flex-direction : column;
@@ -146,6 +143,7 @@
     p{
         flex : 1;
         margin : auto 0;
+        color : #FFF;
     }
     button{
         margin : auto 0;
